# AGS

./: CMakeLists.txt  Pos.h  README.md  func.cpp  func.h  main.cpp  openmp.cpp
.github/workflows/: main.yml
modules/OpenMP/: CMakeLists.txt  hansen_functions.cpp  hansen_functions.h  main.cpp  ops_omp.cpp  ops_omp.h
modules/Sequence/: CMakeLists.txt  func.cpp  func.h  hansen_functions.cpp  hansen_functions.h  main.cpp
modules/Thread/: CMakeLists.txt  hansen_functions.cpp  main.cpp  ops_std.cpp  ops_std.h
report/: report.tex
scripts/: run.bat  run.sh
